<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_fingerprint">Fingerprint</string>
    <string name="title_face">Face</string>
    <string name="app_name" translatable="false">Simprints ID</string>
    <string name="title_activity_front" translatable="false">Simprints ID</string>
    <string name="register_title">Enrolment</string>
    <string name="identify_title">Identification</string>
    <string name="update_title">Update</string>
    <string name="verify_title">Verification</string>
    <string name="help_title">Help</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="alert_title">Alert</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="refusal_label">Refusal Form</string>
    <string name="privacy_label">Privacy</string>
    <string name="front_libSimprints_version" translatable="false">LibSimprints: %1$s</string>
    <string name="front_simprintsId_version" translatable="false">Simprints ID: %1$s</string>
    <string name="simprints_label" translatable="false">Simprints</string>
    <string name="libsimprints_label" translatable="false">LibSimprints</string>
    <string name="launch_background_description" translatable="false">Simprints\' logo as background image</string>
    <string name="short_consent">I would like to use your fingerprints and location so Simprints can find your records. If that\'s not OK or you have any questions let me know, otherwise please place your left thumb flat on the sensor.</string>
    <string name="confirm_consent">Tap here to confirm consent</string>
    <string name="consent_enrol_only">I\'d like to %1$s to enrol you in %2$s.&#160;</string>
    <string name="consent_enrol">I\'d like to %2$s to enrol you in %1$s and identify you in the future.&#160;</string>
    <string name="consent_id_verify">I\'d like to %2$s to find your records for %1$s.&#160;</string>
    <string name="consent_share_data_no">Simprints, a UK-based nonprofit, will have access to your %1$s and current location.&#160;</string>
    <string name="consent_share_data_yes">%1$s and Simprints, a UK-based nonprofit, will have access to your %2$s and current location.&#160;</string>
    <string name="consent_collect_yes">Simprints will also use the data for research purposes.&#160;</string>
    <string name="consent_privacy_rights">If you accept, you may withdraw your permission at any time and ask for your data to be erased.&#160;</string>
    <string name="consent_confirmation">May I %1$s? Please say \"I accept\", \"I decline\", or \"I have questions.\" </string>
    <string name="consent_parental_enrol_only">I\'d like to %2$s to enrol them in %1$s.&#160;</string>
    <string name="consent_parental_enrol">I\'d like to %2$s to enrol them in %1$s and identify them in the future.&#160;</string>
    <string name="consent_parental_id_verify">I\'d like to %2$s to find their records for %1$s.&#160;</string>
    <string name="consent_parental_share_data_no">Simprints, a UK-based nonprofit, will have access to their %1$s and current location.&#160;</string>
    <string name="consent_parental_share_data_yes">%1$s and Simprints, a UK-based nonprofit, will have access to their %2$s and current location.&#160;</string>
    <string name="consent_parental_privacy_rights">If you accept, you may withdraw your permission at any time and ask for your child\'s data to be erased.&#160;</string>
    <string name="consent_parental_confirmation">May I %1$s? Please say \"I accept\", \"I decline\", or \"I have questions.\" </string>
    <string name="biometrics_general_fingerprint">use your fingerprints</string>
    <string name="biometric_general_face">take your photographs</string>
    <string name="biometrics_access_fingerprint">fingerprint information</string>
    <string name="biometrics_access_face">photographs</string>
    <string name="biometrics_access_fingerprint_face">fingerprint information, photographs</string>
    <string name="biometrics_parental_fingerprint">use your child\'s fingerprints</string>
    <string name="biometrics_parental_face">take your child\'s photographs</string>
    <string name="biometric_concat_modalities">and</string>
    <string name="connect_scanner_loading">Loading</string>
    <string name="updating_database">Updating project database…</string>
    <string name="launch_checking_permissions">Checking permissions…</string>
    <string name="connect_scanner_bt_connect">Connecting to Vero…</string>
    <string name="connect_scanner_wake_un20">Waking up UN20…</string>
    <string name="connect_scanner_setup">Setting up Vero…</string>
    <string name="launch_checking_person_in_db">Checking person is in database…</string>
    <string name="launch_consent_decline_button">Decline</string>
    <string name="launch_consent_accept_button">Accept</string>
    <string name="consent_general_title">General Consent</string>
    <string name="consent_parental_title">Parental Consent</string>
    <string name="privacy_notice_text"><u>Privacy Notice</u></string>
    <string name="good_scan_direction">Swipe left to next finger</string>
    <string name="please_scan">Please scan</string>
    <string name="poor_scan_direction">Please re-scan</string>
    <string name="scanning">Scanning…</string>
    <string name="good_scan_message">Good Scan</string>
    <string name="poor_scan_message">Poor Scan</string>
    <string name="no_finger_detected_message">No finger detected</string>
    <string name="finger_skipped_message">Finger skipped</string>
    <string name="no_fingers_scanned">Please scan at least 1 required finger</string>
    <string name="reconnecting_message">Reconnecting…</string>
    <string name="add_finger_dialog_title">Add Finger(s)</string>
    <string name="confirm_fingers_dialog_title">Fingers Scanned</string>
    <string name="rescan_label">Re-scan</string>
    <string name="rescan_label_question">Re-scan?</string>
    <string name="scan_label">Scan</string>
    <string name="cancel_button" tools:ignore="ButtonCase">Cancel</string>
    <string name="ok">OK</string>
    <string name="scan">Scan</string>
    <string name="confirm">Confirm</string>
    <string name="restart">Restart</string>
    <string name="finger_image_description" translatable="false">Hands with arrow pointing to a finger</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="sync_data">Sync Data</string>
    <string name="syncing_calculating">Calculating… </string>
    <string name="syncing_with_progress">Syncing… %1$d/%2$d</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="wait_for_current_sync_to_finish">Please wait for the current sync operation to finish</string>
    <string name="l_5_finger_name">Left Fifth Finger</string>
    <string name="l_4_finger_name">Left Fourth Finger</string>
    <string name="l_3_finger_name">Left Third Finger</string>
    <string name="l_2_finger_name">Left Index Finger</string>
    <string name="l_1_finger_name">Left Thumb</string>
    <string name="r_1_finger_name">Right Thumb</string>
    <string name="r_2_finger_name">Right Index Finger</string>
    <string name="r_3_finger_name">Right Third Finger</string>
    <string name="r_4_finger_name">Right Fourth Finger</string>
    <string name="r_5_finger_name">Right Fifth Finger</string>
    <string name="navbar_simprints_logo">Simprints logo</string>
    <string name="please_wait">Please wait while we proceed to identification</string>
    <string name="loading_candidates">Loading candidates…</string>
    <string name="loaded_candidates_quantity_key" translatable="false">loaded_candidates</string>
    <string name="loaded_candidates_one">Loaded %d candidate.</string>
    <string name="loaded_candidates_other">Loaded %d candidates.</string>
    <string name="matching_fingerprints">Matching fingerprints…</string>
    <string name="returning_results">Returning results…</string>
    <string name="returned_results_quantity_key" translatable="false">returned_results</string>
    <string name="returned_results_one">Returned %d results.</string>
    <string name="returned_results_other">Returned %d results.</string>
    <string name="tier1or2_matches_quantity_key" translatable="false">tier1or2_matches</string>
    <string name="tier1or2_matches_zero">No very good matches</string>
    <string name="tier1or2_matches_one">%d very good match</string>
    <string name="tier1or2_matches_other">%d very good matches</string>
    <string name="tier3_matches_quantity_key" translatable="false">tier3_matches</string>
    <string name="tier3_matches_zero">No good matches</string>
    <string name="tier3_matches_one">%d good match</string>
    <string name="tier3_matches_other">%d good matches</string>
    <string name="tier4_matches_quantity_key" translatable="false">tier4_matches</string>
    <string name="tier4_matches_zero">No matches</string>
    <string name="tier4_matches_one">%d match</string>
    <string name="tier4_matches_other">%d matches</string>
    <string name="bluetooth_error_title">Bluetooth Error</string>
    <string name="configuration_error_title">Configuration Error</string>
    <string name="disconnected_title">Scanner not found</string>
    <string name="verify_guid_not_found_title">Person not found</string>
    <string name="error_occurred_title">Error occurred</string>
    <string name="alert_try_again">Try again</string>
    <string name="low_battery_title">Low battery</string>
    <string name="rooted_device_title">Rooted device detected</string>
    <string name="invalid_projectId_message">A configuration error has occurred (invalid Project Id), please contact your system administrator</string>
    <string name="invalid_selectedId_message">A configuration error has occurred (invalid Selected Id), please contact your system administrator</string>
    <string name="invalid_sessionId_message">A configuration error has occurred (invalid Session Id), please contact your system administrator</string>
    <string name="missing_projectId_message">A configuration error has occurred (no project ID/API Key), please contact your system administrator</string>
    <string name="different_projectId_message">A configuration error has occurred (different Project Id), please sign out from the home screen or contact your system administrator</string>
    <string name="different_userId_message">A configuration error has occurred (different User Id), please sign out from the home screen or contact your system administrator</string>
    <string name="invalid_intentAction_message">A configuration error has occurred (invalid intent action), please contact your system administrator</string>
    <string name="why_did_you_skip_fingerprinting">Why did you skip fingerprinting?</string>
    <string name="button_submit">Submit</string>
    <string name="button_scan_prints">Scan Fingerprints</string>
    <string name="hint_other_reason">Additional Information</string>
    <string name="refusal_religious_concerns">Religious concerns</string>
    <string name="refusal_data_concerns">Does not want to give data</string>
    <string name="refusal_does_not_have_permission">Does not have permission</string>
    <string name="refusal_app_not_working">App not working</string>
    <string name="refusal_person_not_present">Person not present</string>
    <string name="refusal_too_young">Too young</string>
    <string name="refusal_other">Other</string>
    <string name="why_did_you_skip_biometrics">Why did you skip Biometrics?</string>
    <string name="why_did_you_skip_face">Why did you skip face scanning?</string>
</resources>