<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refusalScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_blue"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.simprints.id.activities.faceexitform.FaceExitFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/whySkipFaceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/why_did_you_skip_face"
            android:textAlignment="center"
            android:textColor="@color/simprints_white"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/faceExitFormRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/faceRbReligiousConcerns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_religious_concerns"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbDataConcerns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_data_concerns"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbDoesNotHavePermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_does_not_have_permission"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbAppNotWorking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_app_not_working"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbPersonNotPresent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_person_not_present"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbTooYoung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_too_young"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/faceRbOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal_other"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/faceExitFormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/simprints_white"
            android:enabled="false"
            android:gravity="top|start"
            android:hint="@string/hint_other_reason"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:maxLines="4"
            android:minHeight="100dp"
            android:padding="4dp" />

        <LinearLayout
            android:id="@+id/faceExitFormButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/faceBtGoBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="70dp"
                android:onClick="handleGoBackClick"
                android:text="@string/exit_form_go_back"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/faceBtSubmitExitForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="handleSubmitClick"
                android:minHeight="70dp"
                android:text="@string/button_submit"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
