<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_blue"
    tools:context=".activities.LaunchActivity">

    <ImageView
        android:src="@drawable/launch_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/launch_background_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/short_consent"
        android:textColor="@color/simprints_white"
        android:textSize="20sp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:indeterminateDrawable="@drawable/progress_spinner" >
    </ProgressBar>

    <TextView
        android:id="@+id/confirm_consent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/confirm_consent"
        android:visibility="gone"
        android:textColor="@color/simprints_white"
        android:textSize="20sp"
        />


</LinearLayout>